Async currency conversion working AsyncCurrencyConverter class created FruitDetailsActivity layout improved

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Desafio Muxi</string>
+    <string name="fruit_json_uri">https://raw.githubusercontent.com/muxidev/desafio-android/master/fruits.json</string>
 </resources>
